@@ -55,10 +55,12 @@ struct LaunchRequest {
   int  service;
   int  width, height;
   char peerName[128];
+  int  urlLength;
+  char url[0];
 };
 
 int  supportsPAM(void);
-int  launchChild(int service, struct Session *session);
+int  launchChild(int service, struct Session *session, const char *url);
 void setWindowSize(int pty, int width, int height);
 int  forkLauncher(void);
 void terminateLauncher(void);
